data/derived/sp14/progs/unify/prog4363.ml.out
Characters 131-166:
  buildCosine(build(rand, depth - 1));;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
